# EmbedStaticToSharedLib

./: .gitignore  CMakeLists.txt  EmbedStaticInSharedLib.md  Makefile  README.md  cmake_uninstall.cmake.in
include/: filed.h  libfiled.h
src/: file1.c  file1.c.bak  file2.c  file3.c  main.c
test/: CMakeLists.txt
